# xnor-rewrite-server

./: .env  Cargo.toml  README.md  db.sql  nvims  roadmap.md
src/: api.rs  db.rs  main.rs  result.rs  routes.rs
