[package]
name = "web-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
rocket_db_pools = { version = "0.1.0-rc.2", features = [ "sqlx_postgres", "sqlx_sqlite" ] }
serde = { version = "1.0.144", features = [ "derive" ] }
sqlx = { version = "0.5", features = [ "macros", "offline" ] }

ulid = { version = "1.0.0", features = [ "serde" ] }
dotenvy = "0.15.3"
